Chaptor 17: Compiling Expressions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
     "cstddef": "c",
     "stdio.h": "c",
     "compiler.h": "c",
-    "scanner.h": "c"
+    "scanner.h": "c",
+    "vm.h": "c"
   },
   "C_Cpp.intelliSenseEngineFallback": "enabled"
 }
